Fix overflow of code blocks to enable scrolling in live preview

--- a/resources/preview.css
+++ b/resources/preview.css
@@ -130,6 +130,7 @@ pre {
     border-radius: 3px;
     line-height: normal;
     font-size: $code-font-size;
+    overflow: auto;
 }
 
 code {
